Next Release
============

New features and bug fixes:
  * New function mongoc_uri_set_mechanism_properties to replace all the
    authMechanismProperties on an existing URI.
  * mongoc_uri_get_mechanism_properties asserts its inputs are not NULL.

mongo-c-driver 1.5.0
====================

It is my pleasure to announce the beta release of mongo-c-driver 1.5.0.

New features and bug fixes:
  * MongoDB 3.4 Support
    * New URI and read preference option, "maxStalenessSeconds"
    * MongoDB Handshake
    * writeConcern and readConcern enhancements
    * Collation allows users to specify language-specific rules for string
      comparison when sorting documents. See the code examples for
      mongoc_client_read_command_with_opts, mongoc_collection_count_with_opts,
      mongoc_collection_find_with_opts, and mongoc_index_opt_t, as well as the
      "Setting Collation Order" section of the "Bulk Write Operations" guide.
  * mongoc_collection_count_with_opts uses the collection's read preference if
    none is passed in
  * Improved TLS support
    * Fixed LibreSSL (libssl) support
    * Added LibreSSL (libtls) support
    * Fixed Secure Channel build on VS 2010
    * OpenSSL now supports SNI (all others already do)
  * Additional features for Application Performance Monitoring:
    * mongoc_topology_description_has_writable_server
    * mongoc_topology_description_has_readable_server
  * New functions accept flexible options as a BSON document:
    * mongoc_collection_find_with_opts
    * mongoc_client_read_command_with_opts
    * mongoc_client_write_command_with_opts
    * mongoc_client_read_write_command_with_opts
    * mongoc_database_read_command_with_opts
    * mongoc_database_write_command_with_opts
    * mongoc_database_read_write_command_with_opts
    * mongoc_collection_read_command_with_opts
    * mongoc_collection_write_command_with_opts
    * mongoc_collection_read_write_command_with_opts
    * mongoc_gridfs_find_with_opts