@@ -56,6 +56,20 @@ mongoc_find_and_modify_opts_set_sort (mongoc_find_and_modify_opts_t *opts,
    return false;
 }
 
+void
+mongoc_find_and_modify_opts_get_sort (const mongoc_find_and_modify_opts_t *opts,
+                                      bson_t *sort)
+{
+   BSON_ASSERT (opts);
+   BSON_ASSERT (sort);
+
+   if (opts->sort) {
+      bson_copy_to (opts->sort, sort);
+   } else {
+      bson_init (sort);
+   }
+}
+
 bool
 mongoc_find_and_modify_opts_set_update (mongoc_find_and_modify_opts_t *opts,
                                         const bson_t *update)
@@ -68,6 +82,20 @@ mongoc_find_and_modify_opts_set_update (mongoc_find_and_modify_opts_t *opts,
       return true;
    }
    return false;
+}
+
+void
+mongoc_find_and_modify_opts_get_update (
+   const mongoc_find_and_modify_opts_t *opts, bson_t *update)
+{
+   BSON_ASSERT (opts);
+   BSON_ASSERT (update);
+
+   if (opts->update) {
+      bson_copy_to (opts->update, update);
+   } else {
+      bson_init (update);
+   }
 }
 
 bool
@@ -84,6 +112,20 @@ mongoc_find_and_modify_opts_set_fields (mongoc_find_and_modify_opts_t *opts,
    return false;
 }
 
+void
+mongoc_find_and_modify_opts_get_fields (
+   const mongoc_find_and_modify_opts_t *opts, bson_t *fields)
+{
+   BSON_ASSERT (opts);
+   BSON_ASSERT (fields);
+
+   if (opts->fields) {
+      bson_copy_to (opts->fields, fields);
+   } else {
+      bson_init (fields);
+   }
+}
+
 bool
 mongoc_find_and_modify_opts_set_flags (
    mongoc_find_and_modify_opts_t *opts,
@@ -93,6 +135,15 @@ mongoc_find_and_modify_opts_set_flags (
 
    opts->flags = flags;
    return true;
+}
+
+mongoc_find_and_modify_flags_t
+mongoc_find_and_modify_opts_get_flags (
+   const mongoc_find_and_modify_opts_t *opts)
+{
+   BSON_ASSERT (opts);
+
+   return opts->flags;
 }
 
 bool
@@ -108,6 +159,16 @@ mongoc_find_and_modify_opts_set_bypass_document_validation (
 }
 
 bool
+mongoc_find_and_modify_opts_get_bypass_document_validation (
+   const mongoc_find_and_modify_opts_t *opts)
+{
+   BSON_ASSERT (opts);
+
+   return opts->bypass_document_validation ==
+          MONGOC_BYPASS_DOCUMENT_VALIDATION_TRUE;
+}
+
+bool
 mongoc_find_and_modify_opts_set_max_time_ms (
    mongoc_find_and_modify_opts_t *opts, uint32_t max_time_ms)
 {
@@ -115,6 +176,15 @@ mongoc_find_and_modify_opts_set_max_time_ms (
 
    opts->max_time_ms = max_time_ms;
    return true;
+}
+
+uint32_t
+mongoc_find_and_modify_opts_get_max_time_ms (
+   const mongoc_find_and_modify_opts_t *opts)
+{
+   BSON_ASSERT (opts);
+
+   return opts->max_time_ms;
 }
 
 bool
@@ -125,6 +195,16 @@ mongoc_find_and_modify_opts_append (mongoc_find_and_modify_opts_t *opts,
    BSON_ASSERT (extra);
 
    return bson_concat (&opts->extra, extra);
+}
+
+void
+mongoc_find_and_modify_opts_get_extra (
+   const mongoc_find_and_modify_opts_t *opts, bson_t *extra)
+{
+   BSON_ASSERT (opts);
+   BSON_ASSERT (extra);
+
+   bson_copy_to (&opts->extra, extra);
 }
 
 /**
